<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context="com.example.android.octopusgarden.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/octopus_image_view"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            android:src="@drawable/octopushatching"/>

        <TextView
            android:id="@+id/octopus_garden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:padding="15dp"
            android:textAlignment="center"
            android:text="@string/title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:padding="10dp"
                android:textStyle="italic"
                android:text="@string/description" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#FF6D00"
                android:text="@string/location"/>

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/address" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#FF6D00"
                android:text="@string/hoursLabel"/>

            <TextView
                android:id="@+id/hours_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/hours" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#FF6D00"
                android:text="@string/phoneLabel"/>

            <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/phone" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#FF6D00"
                android:text="@string/emailLabel"/>

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="10dp"
                android:textSize="15sp"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#FF6D00"
                android:text="@string/websiteLabel"/>

            <TextView
                android:id="@+id/website_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/website" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>